Fixed that projects display on mobile? * Removed workbox & sw from dev build * Styling changes to contact section * Styling changes to titles (removed margins between letters) * Fixed those mobile project events ???

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -96,7 +96,6 @@ section{
 .title-wrapper{
   span{
     display: inline-block;
-    margin: 0 .5px;
     &.break{
       width: 5px;
       display: inline-block;
